[package]
name = "dir-translate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.64"
surf = "2.2.0"
tokio = { version = "1.5.0", features = ["full"]}
libretranslate = "0.5.2"
leptess = "0.14.0"
pdfium-render = "0.8.8"
image = "0.25"
docx-rust = "0.1.5"
clap ={version= "4.4.2", features=["derive"]}
walkdir = "2.0.0"
anyhow = "1.0.86"
toml = "0.8.14"
serde = { version = "1.0.204", features = ["derive", "serde_derive"] }
